--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-#all these dependencies are already in the default of stremlit
-#requests==2.32.3
-#urllib3==2.2.2
-#pandas==2.2.2
-#plotly==5.24.0
-#numpy==2.1.1
-#streamlit==1.38.0
+requests==2.32.3
+urllib3==2.2.2
+pandas==2.2.2
+plotly==5.24.0
+numpy==2.1.1
 st-pages==1.0.1
+# already in streamlit env
+#streamlit==1.38.0
