Add burned distribution page

--- a/.streamlit/pages.toml
+++ b/.streamlit/pages.toml
@@ -7,3 +7,9 @@ icon = ':bar_chart:'
 path = 'src/pages/detailed_distribution.py'
 name = 'Detailed Distribution'
 icon = ':bar_chart:'
+
+
+[[pages]]
+path = 'src/pages/burned_distribution.py'
+name = 'Burned BCX'
+icon = ':bar_chart:'
