Add warriorsfund overview page

--- a/.streamlit/pages.toml
+++ b/.streamlit/pages.toml
@@ -2,3 +2,8 @@
 path = 'src/pages/contributions.py'
 name = 'Contributions'
 icon = '🪙'
+
+[[pages]]
+path = 'src/pages/warriorsfund.py'
+name = 'Warriorsfund'
+icon = '💸'
